# perlin-noise

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/include/GL/: freeglut.h
cpp/src/: main.cpp
python/: main.py  requirements.txt
